--- a/making-with-type/index.html
+++ b/making-with-type/index.html
@@ -17,7 +17,7 @@
         <div class="subheading">
             The username is
         </div>
-        <div class="gradient"> NOT available.</div>
+        <div class="gradient random four"> NOT available.</div>
         </div>
         <div class="try">
             Try these instead.
