--- a/wild-web/index.html
+++ b/wild-web/index.html
@@ -7,12 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="w50 textwhite largetext sans bggray">
-        Hello
-    </div>
 
-    <div class="w50 textburgundy mediumtext serif bgwhite">
-        7-2;3993
+    <div class="container">
+        <div class="page w50 bgburgundy textwhite sans padding">
+            <div class="w25">
+                <img src="images/1.png" alt="">
+            </div>
+            <div class="largetext padding serif">
+                header
+            </div>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error excepturi nesciunt quaerat reiciendis animi? Illum ex eius vitae hic excepturi rerum laboriosam, cupiditate aliquid minus fugit? Voluptas quis temporibus neque. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam laborum minima, corporis magnam nam non officia, odit maxime accusamus rerum delectus quam ipsum, odio itaque vero. Pariatur iusto quisquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, nesciunt numquam? Consectetur voluptatibus quam suscipit quisquam, corrupti at, repellat qui doloribus soluta corporis fugiat! Officia eos quae delectus fugit eius. <br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet velit recusandae necessitatibus excepturi sit voluptas autem minus nesciunt facilis cupiditate qui quasi esse iure quaerat, commodi asperiores quia fuga repellendus!
+    
+        </div>
+        <div class="page w50 bggray textbrown">
+            <div class="container">
+                <div class="w25 padding">
+                    some text lolllll xxxxx
+                </div>
+                <div class="w75 padding">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente eligendi atque placeat dignissimos ex! Veniam, amet delectus quos saepe debitis recusandae illum voluptatibus eum consequuntur architecto doloribus, sit minus corporis!
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
