--- a/wild-web/index copy.html
+++ b/wild-web/index copy.html
@@ -66,9 +66,11 @@
 </div>
 <div class="container row5">
     <div class="smalltext w25 p10 sans textbrown"> Although the idea of hibernation as a regular method of spending the winter is no longer accepted for any species of bird, certain hummingbirds, swifts, and poorwills have been known to go into an extremely torpid condition in cold weather (Jaeger 1948, 1949). Thus Aristotle was at least partially vindicated.
-    Aristotle also was the originator of the theory of transmutation, or the seasonal change of one species into another. Frequently one species would arrive from the north just as another species departed for more southerly latitudes. From this he reasoned the two different species were actually one and assumed different plumages to correspond to the summer and winter seasons.
+    Aristotle also was the originator of the theory of transmutation, or the seasonal change of one species into another. Frequently one species would arrive from the north just as another species departed for more southerly latitudes. <br>
+    <br> 
     </div>
-    <div class="w75 textbrown smalltext sans p10 side">Aristotle also was the originator of the theory of transmutation, or the seasonal change of one species into another. Frequently one species would arrive from the north just as another species departed for more southerly latitudes. From this he reasoned the two different species were actually one and assumed different plumages to correspond to the summer and winter seasons.
+    <div class="w50 textbrown smalltext sans p10 ">From this he reasoned the two different species were actually one and assumed different plumages to correspond to the summer and winter seasons. Probably the most remarkable theory advanced to account for migration is contained in a pamphlet, "An Essay toward the Probable Solution of this Question: Whence come the Stork and the Turtledove, the Crane, and the Swallow, when they Know and Observe the Appointed Time of their Coming," mentioned by Clarke (1912: v. 1, 9-11) published in 1703. It is written "By a Person of Learning and Piety," whose "probable solution" stated migratory birds flew to the moon and there spent the winter. Astronauts have so far failed to verify this.
+    Some people, who easily accepted the migratory travels of larger birds, were unable to understand how smaller species, some of them notoriously poor fliers, could make similar journeys. 
 
 
     </div>
