--- a/wild-web/index copy.html
+++ b/wild-web/index copy.html
@@ -89,16 +89,16 @@
 </div>
 
 
-<div class="mediumtext body sans p10 middle textbrown ">
+<div class="mediumtext body mono p10 middle textpurple ">
     The migrations of birds were probably among the first natural phenomena to attract the attention and arouse the imagination of man. Recorded observations on the subject date back nearly 3,000 years, to the times of Hesiod, Homer, Herodotus, Aristotle, and others. In the Bible there are several references to the periodic movements of birds, as in the Book of Job (39:26), where the inquiry is made: "Doth the hawk fly by Thy wisdom and stretch her wings toward the south?" The author of Jeremiah (8:7) wrote: "The stork in the heavens knoweth her appointed time; and the turtledove, and the crane, and the swallow, observe the time of their coming." The flight of quail that saved the Israelites from starvation in their wanderings through the Sinai wilderness is now recognised as a vast migration between their breeding grounds in eastern Europe and western Asia and their winter home in Africa.
 </div>
 
 <div class="container">
     <div class="w50 ptoptwo">
-        <img src="images/colored globe.png" alt="">
+        <img src="images/Screenshot 2024-05-24 at 9.08.47 am.png" alt="">
     </div>
-    <div class="w25 pside ptoptwo">
-        <img src="images/2.png" alt="">
+    <div class="w50 pside ptoptwo">
+        <img src="images/Screenshot 2024-05-24 at 9.09.17 am.png" alt="">
     </div>
     
 </div>
@@ -108,10 +108,10 @@
 </div>
 
 <div class="container textmedium">
-    <div class="w25 row">WHERE </div>
-    <div class="w25 row ">ARE </div>
-    <div class="w25 row ">THE </div>
-    <div class="w25 row ">BIRDS </div>
+    <div class="w25 row">. </div>
+    <div class="w25 row ">. </div>
+    <div class="w25 row ">. </div>
+    <div class="w25 row ">. </div>
 </div>
 <div class="container textmedium">
     <div class="w25 row">lol </div>
