--- a/wild-web/index copy.html
+++ b/wild-web/index copy.html
@@ -90,7 +90,7 @@
 
 
 <div class="mediumtext body mono p10 middle textpurple ">
-    The migrations of birds were probably among the first natural phenomena to attract the attention and arouse the imagination of man. Recorded observations on the subject date back nearly 3,000 years, to the times of Hesiod, Homer, Herodotus, Aristotle, and others. In the Bible there are several references to the periodic movements of birds, as in the Book of Job (39:26), where the inquiry is made: "Doth the hawk fly by Thy wisdom and stretch her wings toward the south?" The author of Jeremiah (8:7) wrote: "The stork in the heavens knoweth her appointed time; and the turtledove, and the crane, and the swallow, observe the time of their coming." The flight of quail that saved the Israelites from starvation in their wanderings through the Sinai wilderness is now recognised as a vast migration between their breeding grounds in eastern Europe and western Asia and their winter home in Africa.
+    Today's birds are extremely accurate, thanks to their parallel multichannel designs. Our birds are quick to lock onto satellites when first turned on. They maintain tracking locks in dense tree cover or in urban settings with tall buildings. Certain atmospheric factors and other error sources can affect the accuracy of some bird species. Migratory bird receivers are typically accurate to within a 10 metre radius. Accuracy is even better on water because there are no obstructions to interfere with their signal.
 </div>
 
 <div class="container">
