--- a/wild-web/index.html
+++ b/wild-web/index.html
@@ -26,7 +26,7 @@
 
 <div class="container">
     <div class="mediumtext ptop w25 textbrown serif ptop p10 row "> CHAPTER 1 <br> 
-        MIGRATION & SATELITE 
+        MIGRATION & SATELITE METHOD
     </div>
     <div class=" w75"> 
     </div>
