--- a/wild-web/index.html
+++ b/wild-web/index.html
@@ -130,9 +130,7 @@
     
 </div>
 
-<div class="w25 middle mono p10 body mediumtext textblack curves shadow sticky"> 
-
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam reiciendis, placeat nulla sapiente deserunt assumenda inventore, iusto hic cumque adipisci veritatis quos facilis dolorum ullam doloribus aut natus! Ipsum, provident? <br> <br> EXIT
+<div class="w25 middle mono p10 body mediumtext textblack curves shadow sticky"> You have arrived. <br><br> LAT. -79.4063075, LONG. 0.3149312, S 79º 24' 22.707", E 0º 18' 53.725"  <br> <br> EXIT
 
 </div>
 
