--- a/onelife/index.html
+++ b/onelife/index.html
@@ -13,12 +13,12 @@
 <body>
     <div class="style">
 
-                <div class="container">
-                    <img src="images/micrsite.png" width="390px">
-                    </div>
-            </div>
 
-            
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="390" height="844" src="https://embed.figma.com/proto/vBmbktulVYmhLvM04yIQ04/MOCA-website?page-id=13%3A152&node-id=13-154&node-type=canvas&viewport=219%2C409%2C0.2&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=13%3A154&embed-host=share" allowfullscreen></iframe> 
 
+            <div class="container">
+                <img src="images/micrsite.png" width="390px">
+                </div>
+        </div>
 
 </body>
