--- a/onelife/index.html
+++ b/onelife/index.html
@@ -14,7 +14,7 @@
     <div class="style">
 
 
-        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="390" height="844" src="https://embed.figma.com/proto/0iUYn0c6rzAY0rSISpjAJC/Untitled?page-id=0%3A1&node-id=1-138&node-type=frame&viewport=82%2C128%2C0.51&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A2&embed-host=share" allowfullscreen></iframe>
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="390" height="844" src="https://embed.figma.com/proto/0iUYn0c6rzAY0rSISpjAJC/Untitled?page-id=0%3A1&node-id=1-138&node-type=canvas&viewport=-240%2C182%2C0.56&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A2&embed-host=share" allowfullscreen></iframe>
 
             
        
