--- a/onelife/index.html
+++ b/onelife/index.html
@@ -14,7 +14,7 @@
     <div class="style">
 
 
-        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100vh" height="100vh" src="https://embed.figma.com/proto/0iUYn0c6rzAY0rSISpjAJC/Untitled?page-id=0%3A1&node-id=1-2&node-type=frame&viewport=331%2C270%2C0.47&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A2&embed-host=share" allowfullscreen></iframe>
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="100%" src="https://embed.figma.com/proto/0iUYn0c6rzAY0rSISpjAJC/Untitled?page-id=0%3A1&node-id=1-2&node-type=frame&viewport=331%2C270%2C0.47&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A2&embed-host=share" allowfullscreen></iframe>
 
             
         
